--- a/example/package.json
+++ b/example/package.json
@@ -25,6 +25,7 @@
   "license": "0BSD",
   "scripts": {
     "build": "gatsby build",
+    "postinstall": "npm link ..",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,css}\"",
     "start": "gatsby develop",
