--- a/tsconfig.json
+++ b/tsconfig.json
@@ -103,8 +103,8 @@
     // "skipLibCheck": true,                                 /* Skip type checking all .d.ts files. */
     // "lib": ["ES2022"],
     // "target": "ES2022",
-    "module": "Node16",
-    "moduleResolution": "Node16",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "outDir": "./dist"
   },
   "include": ["./src/**/*"],
