--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "watch": "tsc --watch",
     "prepare": "npm run build"
   },
+  "files": [
+    "dist/",
+    "index.js",
+    "README.md",
+    "LICENSE"
+  ],
   "author": "",
   "license": "MIT",
-  "dependencies": {
-    "rehype-stringify": "^10.0.0",
-    "remark-parse": "^11.0.0",
-    "remark-rehype": "^11.1.0",
-    "unified": "^11.0.4"
-  },
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
