--- a/tsconfig.json
+++ b/tsconfig.json
@@ -105,7 +105,8 @@
     // "target": "ES2022",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "declaration": true
   },
   "include": ["./src/**/*"],
   "exclude": [
