--- a/example/package.json
+++ b/example/package.json
@@ -13,7 +13,7 @@
     "gatsby-source-filesystem": "^5.13.1",
     "gatsby-transformer-remark": "^6.13.1",
     "gatsby-transformer-sharp": "^5.13.1",
-    "gatsby-transformer-unified": "file:..",
+    "gatsby-transformer-unified": "^0.0.1-canary.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rehype-stringify": "^10.0.0",
@@ -30,7 +30,6 @@
   "license": "0BSD",
   "scripts": {
     "build": "gatsby build",
-    "postinstall": "npm link ..",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,css}\"",
     "start": "gatsby develop",
