--- a/gatsby-transformer-unified/package.json
+++ b/gatsby-transformer-unified/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "clean": "rm -rf dist/*",
     "watch": "tsc --watch",
-    "prepare": "npm run clean && npm run build"
+    "prepare": "npm run clean && npm run build",
+    "prepublishOnly": "cp ../README.md ."
   },
   "files": [
     "dist/",
