ci: add helper script to root package.json to build lib and example

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "license": "MIT",
   "private": true,
+  "scripts": {
+    "build": "cd gatsby-transformer-unified && npm run build && cd ../example && npm run build"
+  },
   "workspaces": [
     "gatsby-transformer-unified",
     "example"
