--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gatsby-transformer-unified-monorepo",
-  "version": "0.0.0",
+  "version": "0.0.1-canary.0",
   "license": "MIT",
   "private": true,
   "scripts": {
